# hub

./: .gitignore  Cargo.toml  Dockerfile
src/: main.rs  meta.rs  service.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.vue  domain.ts  fetch.ts  main.ts
web/src/assets/: style.scss
web/src/components/: HubFooter.vue
