[package]
name = "hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.18", default-features = false, features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
config = { version = "0.13", default-features = false }
warp = { version = "0.3", default-features = false }
serde_yaml = "0.8"
simplelog = "0.12"
anyhow = "1.0"
log = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
